[tool.poetry]
name = "watcher"
version = "0.1.0"
description = "BlinkXT2 surveillance footage back-up to local drive"
authors = ["vincenthang"]

[tool.poetry.dependencies]
python = "=3.7.6"
blinkpy = "^0.14.2"
pytest = "^5.3.5"
argparse = "^1.4.0"
mock = "^4.0.1"
freezegun = "^0.3.15"
pre-commit = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
